<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/lyrun"
        >

    <TextView
            android:id="@+id/txtWelcome"
            android:text="@string/bem_vindo_ao_lyrun"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_purple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"/>

    <Button
            android:id="@+id/btnAgenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agenda"
            android:textAllCaps="false"
            android:backgroundTint="@color/purple_700"
            android:textColor="@android:color/white"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:elevation="4dp"
            android:drawableStart="@android:drawable/ic_menu_agenda"
            android:drawablePadding="8dp"
            tools:ignore="VisualLintButtonSize"/>

    <Button
            android:id="@+id/btnTreino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/treino"
            android:textAllCaps="false"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/purple_700"
            android:textColor="@android:color/white"
            android:padding="12dp"
            android:elevation="4dp"

            android:drawableLeft="@android:drawable/ic_menu_compass"
            android:drawablePadding="8dp"
            tools:ignore="VisualLintButtonSize"/>

    <Button
            android:id="@+id/btnCronometroIntervalo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_700"
            android:text="@string/cron_metro_intervalos"
            android:textAllCaps="false"
            android:padding="12dp"
            android:layout_marginBottom="160dp"
            android:drawableStart="@android:drawable/ic_lock_idle_alarm"
            android:drawablePadding="8dp"
            android:textColor="@android:color/white"
            android:elevation="4dp"
            tools:ignore="VisualLintButtonSize"/>



    <include layout="@layout/footer" />

</LinearLayout>
